[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Character/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Managers/PlayerManager/PlayerManager.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Areas/HangCheckArea/HangCheckArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Areas/CollectableCheckArea/CollectableCheckArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Areas/ShootCheckArea/ShootCheckArea.tscn" type="PackedScene" id=6]

[node name="PlayerManager" type="Node2D"]
script = ExtResource( 2 )

[node name="Character" parent="." instance=ExtResource( 1 )]

[node name="Sprite" parent="Character" index="0"]
frame = 34

[node name="AnimationTree" parent="Character/CharacterAnimation" index="0"]
parameters/in_air/current = 3
parameters/state/current = 1

[node name="HangCheckArea" parent="Character" instance=ExtResource( 3 )]
scale = Vector2( 1.00298, 0.599998 )

[node name="CollectableCheckArea" parent="Character" instance=ExtResource( 4 )]
position = Vector2( 1.00298, -10 )
scale = Vector2( 0.697047, 1 )

[node name="ShootCheckArea" parent="Character" instance=ExtResource( 6 )]
position = Vector2( 16.0478, -11 )
scale = Vector2( 0.828967, 0.84 )

[node name="ShootSpawnPosition" type="Position2D" parent="Character"]
position = Vector2( 16.0478, -11 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[editable path="Character"]
[editable path="Character/CharacterAnimation"]
